[metadata]
name = acpic
summary = acpid event handler for non-root users
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
author = Piotr Śliwka
author_email = contact@psliwka.info
license = WTFPL
home_page = https://github.com/psliwka/acpic
python_requires = >=3.6

[entry_points]
console_scripts =
    acpic = acpic:main
